tests/ui/pattern/usefulness/floats.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/floats.rs:11:11
   |
LL |     match 0.0 {
   |           ^^^ pattern `_` not covered
   |
   = note: the matched value is of type `f64`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         0.0..=1.0 => {},
LL +         _ => todo!()
   |

error: unreachable pattern
  --> $DIR/floats.rs:18:9
   |
LL |         0.01f16..=6.5f16 => {}
   |         ---------------- matches all the relevant values
LL |         0.01f16 => {}
   |         ^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/floats.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:19:9
   |
LL |         0.01f16..=6.5f16 => {}
   |         ---------------- matches all the relevant values
LL |         0.01f16 => {}
LL |         0.02f16 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:20:9
   |
LL |         0.01f16..=6.5f16 => {}
   |         ---------------- matches all the relevant values
...
LL |         6.5f16 => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:31:9
   |
LL |         0.01f32..=6.5f32 => {}
   |         ---------------- matches all the relevant values
LL |         0.01f32 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:32:9
   |
LL |         0.01f32..=6.5f32 => {}
   |         ---------------- matches all the relevant values
LL |         0.01f32 => {}
LL |         0.02f32 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:33:9
   |
LL |         0.01f32..=6.5f32 => {}
   |         ---------------- matches all the relevant values
...
LL |         6.5f32 => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:45:9
   |
LL |         0.01f64..=6.5f64 => {}
   |         ---------------- matches all the relevant values
LL |         0.005f64 => {}
LL |         0.01f64 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:46:9
   |
LL |         0.01f64..=6.5f64 => {}
   |         ---------------- matches all the relevant values
...
LL |         0.02f64 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:47:9
   |
LL |         0.01f64..=6.5f64 => {}
   |         ---------------- matches all the relevant values
...
LL |         6.5f64 => {}
   |         ^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:49:9
   |
LL |         0.01f64..=6.5f64 => {}
   |         ---------------- matches all the relevant values
...
LL |         1.0f64..=4.0f64 => {}
   |         ^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:62:9
   |
LL |         0.01f128..=6.5f128 => {}
   |         ------------------ matches all the relevant values
LL |         0.005f128 => {}
LL |         0.01f128 => {}
   |         ^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:63:9
   |
LL |         0.01f128..=6.5f128 => {}
   |         ------------------ matches all the relevant values
...
LL |         0.02f128 => {}
   |         ^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:64:9
   |
LL |         0.01f128..=6.5f128 => {}
   |         ------------------ matches all the relevant values
...
LL |         6.5f128 => {}
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/floats.rs:66:9
   |
LL |         0.01f128..=6.5f128 => {}
   |         ------------------ matches all the relevant values
...
LL |         1.0f128..=4.0f128 => {}
   |         ^^^^^^^^^^^^^^^^^ no value can reach this

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0004`.
